rf: Call the squares in the current row in a new way, delete unnecessary classes and IDs

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <div id="ctn-playground">
         <!--the playground structure was insired by https://github.com/LudovicLeGuen/Mastermind-->
-        <div id="row11" class="row">
+        <div class="row">
             <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
@@ -60,7 +60,7 @@
                 <div class="circle"></div>
             </div>
         </div>
-        <div id="row10" class="row">
+        <div class="row">
             <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
@@ -76,7 +76,7 @@
                 <div class="circle"></div>
             </div>
         </div>
-        <div id="row9" class="row">
+        <div class="row">
             <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
@@ -92,7 +92,7 @@
                 <div class="circle"></div>
             </div>
         </div>
-        <div id="row8" class="row">
+        <div class="row">
             <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
@@ -108,7 +108,7 @@
                 <div class="circle"></div>
             </div>
         </div>
-        <div id="row7" class="row">
+        <div class="row">
             <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
@@ -124,7 +124,7 @@
                 <div class="circle"></div>
             </div>
         </div>
-        <div id="row6" class="row">
+        <div class="row">
             <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
@@ -140,7 +140,7 @@
                 <div class="circle"></div>
             </div>
         </div>
-        <div id="row5" class="row">
+        <div class="row">
             <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
@@ -156,7 +156,7 @@
                 <div class="circle"></div>
             </div>
         </div>
-        <div id="row4" class="row">
+        <div class="row">
             <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
@@ -172,7 +172,7 @@
                 <div class="circle"></div>
             </div>
         </div>
-        <div id="row3" class="row">
+        <div class="row">
             <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
@@ -188,7 +188,7 @@
                 <div class="circle"></div>
             </div>
         </div>
-        <div id="row2" class="row">
+        <div class="row">
             <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
@@ -204,7 +204,7 @@
                 <div class="circle"></div>
             </div>
         </div>
-        <div id="row1" class="row">
+        <div class="row">
             <div class="square-row">
                 <div class="square"></div>
                 <div class="square"></div>
@@ -220,13 +220,13 @@
                 <div class="circle"></div>
             </div>
         </div>
-        <div id="row0" class="row">
+        <div class="row">
             <div class="square-row">
-                <div class="square square-row0"></div>
-                <div class="square square-row0"></div>
-                <div class="square square-row0"></div>
-                <div class="square square-row0"></div>
-                <div class="square square-row0"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
             </div>
             <div class="circle-row">
                 <div class="circle"></div>
