--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+
     <header>
         <h1 class="main-heading">Discover the Secret Code</h1>
         <div id="ctn-code-music-rules">
@@ -30,12 +31,38 @@
                 <div id="music">
                     <span id="music-note"><i class="fa-solid fa-music"></i></span>
                     <!-- <span id="music-on"><i class="fa-solid fa-circle-play"></i></span>
-                    <span id="music-off"><i class="fa-solid fa-stop"></i></span> -->
+                        <span id="music-off"><i class="fa-solid fa-stop"></i></span> -->
                 </div>
                 <div id="rules"><i class="fa-solid fa-question"></i></div>
             </div>
         </div>
     </header>
+
+    <!-- Tutorial for the pop up window https://www.youtube.com/watch?v=IFoG8-oAELM -->
+    <div id="welcome-pop-up">
+        <img src="assets/images/close-icon-13612.png" alt="A closing icon in the shape on an X" id="close"
+            class="close">
+        <h2>Welcome to Discover the Secret Code Game</h2>
+        <p>There is a secret color code you have to break. You have 12 attempts.</p>
+        <h2>Rules</h2>
+        <p>Click on one out of eight colors in the color picker below the play board. Choose five colors. Colors can
+            be
+            repeated. Once you are happy with the choice of all five colors,
+            press the Check button. Your clues will be shown on the right.
+        </p>
+        <h2>Clues</h2>
+        <ul>
+            <li>White circle - you guessed a color, but not its position</li>
+            <li>Black circle - you guessed a color, and its position</li>
+            <li>Grey circle - wrong color was chosen</li>
+        </ul>
+        <p>
+            The position of the black, white and grey circles does not correspond to a particular color choice.
+            If you guess the color code in less than 12 attempts, you win. If not, too bad, but you can try again.
+            Enjoy!
+        </p>
+        <button type="button" id="play-button" class="button" data-type="play">Play</button>
+    </div>
 
     <div id="ctn-score">
         <!-- This code is inspired by Love Maths -->
@@ -255,6 +282,7 @@
         </div>
     </div>
 
+    <!-- Adds javascript file to the html document -->
     <script src="assets/js/script.js" type="module"></script>
 </body>
 
