feat: Change css for fa-question and add event listener to this icon to display the welcome pop up

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <!-- <span id="music-on"><i class="fa-solid fa-circle-play"></i></span>
                         <span id="music-off"><i class="fa-solid fa-stop"></i></span> -->
                 </div>
-                <div id="rules"><i class="fa-solid fa-question"></i></div>
+                <div id="question-mark"><i class="fa-solid fa-question"></i></div>
             </div>
         </div>
     </header>
