--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <p>Do you want to play again?</p>
         <div class="game-over-buttons">
             <button type="button" id="play-again-button" class="button" data-type="play-again">Play again</button>
-            <button type="button" id="exit-button" class="button" data-type="exit">Exit</button>
+            <button type="button" id="exit-button" class="button" data-type="exit">Close</button>
         </div>
     </div>
 
@@ -87,7 +87,7 @@
         <p>Do you want to play again?</p>
         <div class="game-over-buttons">
             <button type="button" class="button" data-type="play-again-2">Play again</button>
-            <button type="button" class="button" data-type="exit-2">Exit</button>
+            <button type="button" class="button" data-type="exit-2">Close</button>
         </div>
     </div>
 
