feat: Add a commiseration pop up and fix bug where winning chime would not play if code guessed on the last row

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
     </div>
 
     <div id="you-lost-pop-up" class="pop-up">
+        <audio id="losing-chime">
+            <source src="assets/music/Wrong 02.wav">
+        </audio>
         <img src="assets/images/Game-Over-PNG-Image.png" alt="A black Game Over picture" id="commiseration-image">
         <p>Sorry, not even 12 attempts were enough for you to guess the secret color code.</p>
         <p>Do you want to play again?</p>
