bug: When play again button is pressed, the moves and currentIndexRow are not cleared and the user starts in the moves+1 row

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <button type="button" id="play-button" class="button" data-type="play">Play</button>
     </div>
 
+
     <!-- https://www.learningguild.com/articles/coding-sound-with-javascript-beginner-s-guide/?rd=1 -->
     <div id="you-won-pop-up" class="pop-up">
         <audio id="winning-chime">
@@ -99,198 +100,199 @@
         <p id="time">Time: <span id="time-elapsed">00:00</span></p>
         <p id="moves">Moves: <span id="moves-needed">0</span></p>
     </div>
+
     <div id="ctn-playground">
         <!--the playground structure was insired by https://github.com/LudovicLeGuen/Mastermind-->
         <div class="row">
             <div class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
             </div>
             <div class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
             </div>
             <div class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
             </div>
             <div class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
             </div>
             <div class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
             </div>
             <div class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
             </div>
             <div class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
             </div>
             <div class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
             </div>
             <div class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
             </div>
             <div class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
             </div>
             <div class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
             </div>
             <div class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
+                <div class="square square-init"></div>
             </div>
             <div class="circle-row">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
+                <div class="circle circle-init"></div>
             </div>
         </div>
     </div>
