feat: Set up the Initial state
This unifies initialization, play again and restart events

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 
     <div id="ctn-score">
         <!-- This code is inspired by Love Maths -->
-        <p id="time">Time: <span id="time-elapsed">00:00</span></p>
-        <p id="moves">Moves: <span id="moves-needed">0</span></p>
+        <p id="time">Time: <span id="time-elapsed"></span></p>
+        <p id="moves">Moves: <span id="moves-needed"></span></p>
     </div>
 
     <div id="ctn-playground">
