style: Move the keys into the middle of the square for large screens

--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
             <div id="ctn-music-and-rules">
                 <div id="music">
                     <span id="music-note"><i class="fa-solid fa-music"></i></span>
-                    <!-- <span id="music-on"><i class="fa-solid fa-circle-play"></i></span>
-                        <span id="music-off"><i class="fa-solid fa-stop"></i></span> -->
                 </div>
                 <div id="question-mark"><i class="fa-solid fa-question"></i></div>
             </div>
@@ -41,8 +39,8 @@
     <!-- Tutorial for the pop up window https://www.youtube.com/watch?v=IFoG8-oAELM -->
     <!-- This message is shown when the page loads or when the user clicks on the question mark -->
     <div id="welcome-pop-up" class="pop-up">
-        <img src="assets/images/close-icon-13612.png" alt="A closing icon in the shape on an X" id="close"
-            class="close">
+        <!-- <img src="assets/images/close-icon-13612.png" alt="A closing icon in the shape on an X" id="close"
+            class="close"> -->
         <h2>Welcome to Discover the Secret Code Game</h2>
         <p>There is a secret color code you have to break. You have 12 attempts.</p>
         <h2>Rules</h2>
